# advent_of_code

./: .gitignore  CMakeLists.txt  README.md
src/: concat.h  main.cpp  peglib.h  util.cpp  util.h
src/2015/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  md5.h  y2015.cpp  y2015.h
src/2016/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  y2016.cpp  y2016.h
src/2017/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  knot_hash.cpp  knot_hash.h  y2017.cpp  y2017.h
src/2018/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  y2018.cpp  y2018.h
src/2019/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  intcode.cpp  intcode.h  y2019.cpp  y2019.h
src/2020/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  y2020.cpp  y2020.h
src/2021/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  y2021.cpp  y2021.h
src/2022/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  day_3.cpp  day_4.cpp  day_5.cpp  y2022.cpp  y2022.h
src/2023/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  days.h  y2023.cpp  y2023.h
src/2024/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  day_13.cpp  day_14.cpp  day_15.cpp  day_16.cpp  day_17.cpp  day_18.cpp  day_19.cpp  day_20.cpp  day_21.cpp  day_22.cpp  day_23.cpp  day_24.cpp  day_25.cpp  y2024.cpp  y2024.h
src/2025/: day_01.cpp  day_02.cpp  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_09.cpp  day_10.cpp  day_11.cpp  day_12.cpp  y2025.cpp  y2025.h
src/util/: grid.h  make_year.cpp  make_year.h  util.h  vec2.h  vec3.h  vec4.h
